Walk on the structural answer, and let a reason travel with its position
The walk decided what was under a position with `productFields`, which answers a
record's fields and nothing for anything else, then fell out of the bottom into a
report of a position the model does not divide. Beside it ran `stopped`, a
`Set<String>` of paths with one contributor — the depth limit — and `undividedIn`
chose between a reason and an absence by asking whether the path's spelling was in
that set.

Now the walk asks `StructuralInspection` and keeps what it answers. A record is its
children and is descended into; everything else is a position still to be answered
for, carrying what it is left with if nothing answers. `Axis.pendingAt` holds that
beside the position rather than in a list to be rejoined later, so the reason and
what it is about are one value.

`stopped` is gone, and so is the recovery that needed it: the second pass no longer
reads the first pass's conclusions back by `at()` equality to find a reason it
already had. What is still joined there is a rule this could not read, which is a
fact about a rule and not about a position, and has nowhere else to live yet.

`productFields` is gone too. Which positions are under a position is one question
and it is answered in one place.

Also keeps the order of a record's fields, which `Map.copyOf` does not. It is part
of the answer — what a report names first and which field a row is built for first
are read off it — so an unordered copy left three tests reading a hash order. They
are the tests that caught it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019GSZdJqs1yDbifBZ3P69a6